# eight

./: .gitignore  Cargo.toml  Justfile  README.md  pyproject.toml
compiler/eight-driver/: Cargo.toml
compiler/eight-driver/src/: lib.rs  pipeline.rs  query.rs
compiler/eight-driver/src/operations/: emit_ast.rs  emit_hir.rs  mod.rs  parse.rs  syntax_lower.rs  type_check.rs
compiler/eight-hir/: Cargo.toml
compiler/eight-hir/src/: arena.rs  context.rs  error.rs  expr.rs  fun.rs  item.rs  lib.rs  query.rs  rec.rs  scalar.rs  signature.rs  stmt.rs  ty.rs
compiler/eight-hir/src/passes/: debug.rs  syntax_lower.rs  type_checker.rs
compiler/eight-hir/src/syntax_lowering_pass/: mod.rs
compiler/eight-hir/src/textual_pass/: mod.rs
compiler/eight-hir/src/type_check_pass/: mod.rs  typing_context.rs
compiler/eight-hir/tests/: inference_tests.rs  lowering_tests.rs
compiler/eight-hir/tests/common/: mod.rs
compiler/eight-hir/tests/snapshots/: inference_tests__chaining_infers_unit.snap  inference_tests__constant_record_access.snap  inference_tests__construction.snap  inference_tests__function_calls.snap  inference_tests__generic_fn_ref.snap  inference_tests__generic_substitution.snap  inference_tests__local_resolution.snap  inference_tests__offset_index_yields_inner.snap  inference_tests__pointer_deref.snap  inference_tests__uninitialized_inference.snap  lowering_tests__snapshot_corpus@for_loop_reduction.test.snap  lowering_tests__snapshot_corpus@generic_substituion.test.snap  lowering_tests__snapshot_corpus@kitchen_sink.test.snap  lowering_tests__snapshot_corpus@record_decl.test.snap
compiler/eight-mir/: Cargo.toml
compiler/eight-mir/src/: ir.rs
compiler/eight-syntax/: Cargo.toml
compiler/eight-syntax/src/: arena.rs  ast.rs  error.rs  lexer.rs  lib.rs  macros.rs  parser.rs  tok.rs
compiler/eight-syntax/tests/: parser_tests.rs
compiler/eight-syntax/tests/data/: instances.test  matmul.test
compiler/eight-syntax/tests/snapshots/: parser_tests__snapshot_corpus@fma.test.snap  parser_tests__snapshot_corpus@instances.test.snap  parser_tests__snapshot_corpus@intrinsic_declaration.test.snap  parser_tests__snapshot_corpus@matmul.test.snap  parser_tests__snapshot_corpus@quicksort.test.snap  parser_tests__snapshot_corpus@traits.test.snap
compiler/eight-tests/: Cargo.toml
compiler/eight-tests/tests/: compiler_tests.rs  stdlib.rs  ui_tests.rs
compiler/eight-tests/tests/snapshots/: stdlib__evaluate_stdlib.snap  ui_tests__compiler_ui_tests@sema__invalid_function_reference.test.snap  ui_tests__compiler_ui_tests@sema__invalid_let_binding.test.snap  ui_tests__compiler_ui_tests@syntax__loop__break_outside_loop.test.snap  ui_tests__compiler_ui_tests@syntax__loop__continue_outside_loop.test.snap  ui_tests__compiler_ui_tests@syntax__trivial__too_long_integer.test.snap  ui_tests__compiler_ui_tests@syntax__trivial__unexpected_character.test.snap  ui_tests__compiler_ui_tests@syntax__trivial__unexpected_end_of_file.test.snap  ui_tests__compiler_ui_tests@syntax__trivial__unexpected_token.test.snap  ui_tests__compiler_ui_tests@syntax__trivial__unterminated_token.test.snap  ui_tests__compiler_ui_tests@trait__trait_does_not_exist.test.snap  ui_tests__compiler_ui_tests@trait__trait_instance_couldnt_match.test.snap  ui_tests__compiler_ui_tests@trait__trait_instance_missing_fn.test.snap  ui_tests__compiler_ui_tests@type__call_mismatched_argument_count.test.snap  ui_tests__compiler_ui_tests@type__constant_index_of_non_struct.test.snap  ui_tests__compiler_ui_tests@type__constant_index_unknown_field_name.test.snap  ui_tests__compiler_ui_tests@type__if_no_boolean_cond.test.snap  ui_tests__compiler_ui_tests@type__inference_into_field.test.snap  ui_tests__compiler_ui_tests@type__invalid_field_reference_of_non_struct.test.snap  ui_tests__compiler_ui_tests@type__invalid_struct_field_reference.test.snap  ui_tests__compiler_ui_tests@type__let_assignment_type_mismatch.test.snap  ui_tests__compiler_ui_tests@type__let_assignment_unknown_type.test.snap  ui_tests__compiler_ui_tests@type__loop_no_boolean_cond.test.snap  ui_tests__compiler_ui_tests@type__type_construct_field_type_mismatch.test.snap  ui_tests__compiler_ui_tests@type__type_construct_missing_field.test.snap  ui_tests__compiler_ui_tests@type__type_construct_provided_unknown_field.test.snap
compiler/eight-tests/tests/syntax/: fma.test  instances.test  matmul.test  traits.test
compiler/eight-tests/tests/syntax-lowering/: kitchen_sink.test  record_decl.test
compiler/eight-tests/tests/type-inference/: chaining_infers_unit.test  constant_record_access.test  construction.test  generic_fn_ref.test  uninitialized_inference.test
compiler/hachi-driver/: Cargo.toml
compiler/hachi-driver/src/: pipeline.rs
compiler/hachi-hir/: Cargo.toml
compiler/hachi-hir/src/: context.rs  error.rs  expr.rs  format.rs  fun.rs  hir.rs  lib.rs  rec.rs  stmt.rs  ty.rs
compiler/hachi-hir/src/passes/: debug.rs  mod.rs  syntax_lower.rs  syntax_lowering.rs  type_checker.rs
compiler/hachi-hir/src/syntax_lowering/: expr.rs  item.rs  mod.rs  stmt.rs  type.rs
compiler/hachi-hir/tests/: inference_tests.rs  lowering_tests.rs
compiler/hachi-hir/tests/common/: mod.rs
compiler/hachi-syntax/: Cargo.toml
compiler/hachi-syntax-lower/: Cargo.toml
compiler/hachi-syntax-lower/src/: error.rs  expr.rs  item.rs  lib.rs  stmt.rs  type.rs
compiler/hachi-syntax-lower/tests/: lowering_tests.rs
compiler/hachi-syntax/src/: ast.rs  error.rs  lexer.rs  lib.rs  macros.rs  parser.rs  span.rs  tok.rs
compiler/hachi-syntax/tests/: parser_tests.rs
compiler/hachi-tests/: Cargo.toml
hachi-ir/: Cargo.toml
hachi-parse/: Cargo.toml
hachi-parse/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  span.rs  syntax.rs
hachi-parse/tests/: parser_tests.rs
hachi-parse/tests/data/: fma.test
hachi-parse/tests/snapshots/: parser_tests__snapshot_corpus.snap  parser_tests__snapshot_corpus@fma.test.snap  parser_tests__snapshot_corpus@matmul.test.snap  parser_tests__snapshot_corpus@quicksort.test.snap
hachi-syntax-pass/: Cargo.toml
hachi-syntax-pass/src/: scope.rs
stdlib/: prelude  (+5 more)
(+245 files in other folders)
