[workspace]
resolver = "2"
members = [
    "compiler/hachi-diagnostics",
    "compiler/hachi-driver",
    "compiler/hachi-hir",
    "compiler/hachi-mir",
    "compiler/hachi-macros",
    "compiler/hachi-span",
    "compiler/hachi-syntax",
    "compiler/hachi-tests",
]

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[workspace.dependencies]
miette = { version = "7.4.0", features = ["derive"] }
insta = { version = "1.41.1", features = ["serde", "ron", "glob"] }
insta-cmd = { version = "0.6.0" }
serde = { version = "1.0.216", features = ["derive"] }
ron = { version = "0.8.1" }
thiserror = "2.0.6"
