[workspace]
resolver = "2"
members = [
    "compiler/eight-diagnostics",
    "compiler/eight-driver",
    "compiler/eight-hir",
    "compiler/eight-mir",
    "compiler/eight-macros",
    "compiler/eight-span",
    "compiler/eight-syntax",
    "compiler/eight-tests",
    "tools/eight-not",
]

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[workspace.dependencies]
bumpalo = { version = "3.11.1", features = ["collections"] }
miette = { version = "7.4.0", features = ["derive"] }
insta = { version = "1.41.1", features = ["serde", "ron", "glob"] }
insta-cmd = { version = "0.6.0" }
serde = { version = "1.0.216", features = ["derive"] }
ron = { version = "0.8.1" }
thiserror = "2.0.6"
