[package]
name = "hachi-parse"
version = "0.1.0"
edition = "2021"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
miette = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
ron = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
