[package]
name = "hachi-ir"
version = "0.1.0"
edition = "2021"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
hachi-macros = { path = "../hachi-macros" }
hachi-parse = { path = "../hachi-parse" }
miette = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
hachi-macros = { path = "../hachi-macros", features = ["assertion-macros"] }
insta = { workspace = true }
ron = { workspace = true }
