[package]
name = "hachi-hir"
version = "0.1.0"
edition = "2021"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
hachi-diagnostics = { path = "../hachi-diagnostics" }
hachi-macros = { path = "../hachi-macros" }
hachi-span = { path = "../hachi-span" }
hachi-syntax = { path = "../hachi-syntax" }

bumpalo = { workspace = true }
miette = { workspace = true }
pretty = "0.12.3"
serde = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
hachi-macros = { path = "../hachi-macros", features = ["assertion-macros"] }
insta = { workspace = true }
ron = { workspace = true }
